--- a/app/src/main/res/layout/fragment_rsslist.xml
+++ b/app/src/main/res/layout/fragment_rsslist.xml
@@ -5,12 +5,9 @@
     tools:context="at.fhtw.rssreader.fragments.rsslist">
 
     <!-- TODO: Update blank fragment layout -->
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New Button"
-        android:id="@+id/btn_test"
-        android:layout_gravity="center" />
+    <ListView
+    android:id="@+id/rssListView"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" />
 
 </FrameLayout>
