--- a/app/src/main/res/layout/fragment_itemlist.xml
+++ b/app/src/main/res/layout/fragment_itemlist.xml
@@ -6,8 +6,10 @@
 
 
     <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/itemList" />
-
+        android:id="@+id/itemList"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent" />
 </FrameLayout>
+
+
+
